demo-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod
spec:
  restartPolicy: Always
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    resources:
      requests:
        cpu: "1000m"
        memory: "256Mi"
      limits:
        cpu: "2000m"
        memory: "512Mi"
    livenessProbe:
      exec:
        command: ["echo", "Hello, World!"]
      initialDelaySeconds: 5
      periodSeconds: 5
    volumeMounts:
    - name: configmap-volume
      mountPath: /etc/config/configmap
    - name: secret-volume
      mountPath: /etc/config/secret
  volumes:
  - name: configmap-volume
    configMap:
      name: my-configmap
  - name: secret-volume
    secret:
      secretName: my-secret
