nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test-nginx
  name: test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        command: ["/bin/sh", "-c", 'echo "configmap: $CONFIGMAPVAR secret: $SECRETVAR"']
        resources: {}
status: {}
