ping-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingtest
  labels:
    app: pinger
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pinger
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pinger
    spec:
      containers:
      - image: ubuntu:latest
        name: ubuntu-ctr
        command:
          - /bin/bash
          - "-c"
          - "sleep 60m"
        volumeMounts:
          - mountPath: "/mnt/k8s-pvc"
            name: configpvc
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      volumes:
        - name: configpvc
          persistentVolumeClaim:
            claimName: pvc
