pod-svc-test.yml
#most generic pod possible for testing stuff!
apiVersion: v1
kind: Pod
metadata:
  name: pod-svc-test
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command:
    - sh
    - -c
    - 'while true; do sleep 10; done'
