volume-pod.yml
#most generic pod possible for testing stuff!
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command:
    - sh
    - -c
    - 'echo Success! > /output/success.txt'
    volumeMounts:
    - name: my-volume
      mountPath: /output
  volumes:
  - name: my-volume
    hostPath:
      path: /var/data
